# log-tracing-layer

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: build.yaml  release.yaml  release_dd_tracing_layer.yaml  release_log_tracing_layer.yaml  release_nr_tracing_layer.yaml
dd-tracing-layer/: Cargo.toml  README.md
dd-tracing-layer/src/: datadog_ingestor.rs  lib.rs
dd-tracing-layer/tests/: datadog.rs
log-tracing-layer/: Cargo.toml  README.md
log-tracing-layer/src/: layer.rs  lib.rs  log_ingestor.rs  visitor.rs
newrelic-tracing-layer/: Cargo.toml  README.md  reqs.http
newrelic-tracing-layer/src/: lib.rs  newrelic_ingestor.rs
newrelic-tracing-layer/tests/: newrelic.rs
nr-tracing-layer/: Cargo.toml  README.md
nr-tracing-layer/src/: lib.rs  new_relic_ingestor.rs
nr-tracing-layer/tests/: new_relic.rs
