[package]
name = "dd-tracing-layer"
version = "0.1.2"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Send your logs to Datadog"
edition = "2021"
license = "MIT"
repository = "https://github.com/robertohuertasm/log-tracing-layer"
categories = ["development-tools", "debugging", "asynchronous", "profiling"]
keywords = ["tracing", "log", "datadog", "layer", "tracing-subscriber"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log-tracing-layer = { path = "../log-tracing-layer", version = "0.1.0" }
tracing-subscriber = "0.3" 
tracing = "0.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
serde_json = "1"
chrono = "0.4"
async-trait = "0.1"
async-recursion = "1.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["json", "registry"] }
httpmock = "0.6.7"
